# reservation

./: .env.example  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: error.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20250609130800_reservation.down.sql  20250609130800_reservation.up.sql  20250609131231_reservation_trigger.down.sql  20250609131231_reservation_trigger.up.sql  20250609131528_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 001-core-reservation.md  rfcs-template.md
