[package]
name = "reservation"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
abi = {version = "0.1.0", path = "../abi"}
thiserror = "2.0.12"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
