[package]
name = "reservation"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
abi = {version = "0.1.0", path = "../abi"}
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
